test/test_12111624_5.out
Error type A at Line 1: unknown lexeme 1test_r05
Error type B at Line 1: Missing semicolon ';'
