test/test_12111624_5.spl
int 1test_r05(){
    int @ = 777;
    998244353.2147483647.19260817;
}